Added some comments to bit, removed duplicated entry in README.

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,4 +1,5 @@
 # EXAMPLE FILE DO NOT USE
+# This file is used in conjuction with the .yml to provide nesseary parameters.
 
 DOMAIN=YOURDOMAIN.COM
 
