fix: Add write permissions to GitHub Actions workflow
🐛 Bug Fix - GitHub Actions Authentication
- Add 'permissions: contents: write' to workflow
- Grants GITHUB_TOKEN write access to push commits
- Fixes 403 error: 'Write access to repository not granted'

✅ Impact:
- Auto-update manifest workflow can now push changes
- No additional secrets or PAT tokens needed
- Uses built-in GITHUB_TOKEN with proper permissions

--- a/.github/workflows/generate-manifest.yml
+++ b/.github/workflows/generate-manifest.yml
@@ -13,6 +13,9 @@ on:
     # Run every 30 minutes
     - cron: '*/30 * * * *'
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
