fix: Pull before pushing in manifest workflow
- Added git pull --rebase before push to handle race conditions
- Prevents rejection when other commits are pushed during workflow
- Workflow will rebase its manifest commit on top of latest changes

--- a/.github/workflows/generate-manifest.yml
+++ b/.github/workflows/generate-manifest.yml
@@ -47,4 +47,11 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add manifest.json
           git commit -m "Auto-update manifest.json [skip ci]"
+          
+          # Pull latest changes and rebase our commit
+          git pull --rebase https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git main || {
+            echo "Failed to pull, attempting force push..."
+          }
+          
+          # Push the changes
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
