--- a/.github/workflows/generate-manifest.yml
+++ b/.github/workflows/generate-manifest.yml
@@ -1,14 +1,11 @@
-name: Generate Manifest
+name: Generate Manifest (Disabled)
+
+# Workflow disabled - manifest.json is now fetched directly from GitHub
+# by menu.sh and menu.py. No need for auto-generation workflow.
+# To manually generate: ./scripts/generate_manifest.sh
 
 on:
-  push:
-    paths:
-      - 'scripts/**'
-      - 'tools/**'
-      - 'bash_exercises/**'
-      - 'uninstallers/**'
-      - 'scripts/generate_manifest.sh'
-  workflow_dispatch:
+  workflow_dispatch:  # Manual trigger only
 
 permissions:
   contents: write
