feat: Update README security scope and refine .gitignore; add update_manifest.sh script

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,5 @@ Thumbs.db
 README_OLD.md
 *.env
 
-# Generated files (managed by GitHub Actions)
+# Generated files (can be regenerated)
 manifest.json
-
-# Local development scripts
-update_manifest.sh
