Add unit tests for manifest caching, script repository updates, and script execution
- Implemented unit tests for manifest cache refresh behavior in `test_manifest.py`.
- Added comprehensive tests for update detection and handling in `test_repository.py`.
- Created unit tests for script execution logic in `test_script_execution.py`.

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -7,7 +7,7 @@ python_classes = Test*
 python_functions = test_*
 
 # Test paths (pytest.ini is in tests/ directory)
-testpaths = .
+testpaths = . unit integration e2e
 
 # Output options
 addopts = 
